# eometadatatool

./: .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cdse_stac_catalogue_markdown_eoframework_esa.md  credentials.json.example  pyproject.toml  shell.nix
eometadatatool/: checksum.py  custom_types.py  datacube.py  dict_to_tree.py  dlc.py  docstring.py  etree_utils.py  extract.py  flags.py  footprint_facility.py  function_namespace.py  gdalinfo.py  geom_utils.py  logging_conf.py  mapping_loader.py  metadata_extract.py  metafile_loader.py  odata_response.py  performance.py  s3_utils.py
eometadatatool/clas/: collection_name.py  mapping.py  product_type.py  template.py
eometadatatool/mappings/: AUX_CTMFCT.csv  CCM.csv  CCM_PH.csv  CCM_SW.csv  LC09_L1.csv  LC09_L2SR.csv  LC09_L2ST.csv  MAJA.csv  MOON_TEST_INDIA.csv  ProductTypes2RuleMapping.csv  S2_MOSAIC.csv  S2_MSI_DIR.csv  S2_MSI_unzip.csv  S2_from_S3.csv  S5P_TROPOMI_L3.csv
eometadatatool/renderers/: __init__.py  python_render.py
eometadatatool/stac/: README.md
eometadatatool/stac/ccm-dem/example/: DEM1_SAR_DGE_10_20101212T161059_20121019T160254_ADS_000000_5201_268d160c.json  DEM1_SAR_DGE_30_20101212T040432_20121120T041804_ADS_000000_0728_85f7b923.json  DEM1_SAR_DGE_90_20110204T175855_20140911T175055_ADS_000000_eWNC_b624be3c.json  DEM1_SAR_DTE_30_20101212T040432_20121120T041804_ADS_000000_0730_884b2eb3.json  DEM1_SAR_INS_10_20101212T161059_20121019T160254_ADS_000000_5203_5c8861be.json
eometadatatool/stac/ccm-dem/mapping/: CCM_DEM.csv
eometadatatool/stac/ccm-dem/template/: collection-ccm-dem.json  stac_ccm_dem.py
eometadatatool/stac/ccm-optical/example/: AL01_AV2_OBS_3A_20061016T110352_20061016T110352_ESA_3871_PREU.json  AL01_AV2_OBS_3A_20070811T101306_20070811T101306_ESA_8232_PREU.json  AL01_PSM_OB1_3A_20061002T094937_20061002T094937_ESA_3666_PREU.json  AL01_PSM_OB1_3A_20070609T101103_20070609T101103_ESA_7313_PREU.json  AR3D_A3D_DEM_18_20000201T000000_20000228T235959_TOU_1234_0e86.json  DM01_SL6_22P_1R_20110101T085242_20110101T085357_DMI_0_2770_61a2077f.json  DM01_SL6_22P_1T_20110101T085242_20110101T085357_DMI_0_2770_618cb9dc.json  DM01_SL6_22P_1T_20150401T075904_20150401T080005_DMI_0_66dd.json  DM01_SL6_22S_1R_20110102T092437_20110102T092441_DMI_0_2779.json  DM01_SL6_22S_1T_20110102T092437_20110102T092441_DMI_0_2779.json  DM02_HRS_MS2_1D_20230414T082741_20230414T082744_TOU_047790_fe81.json  DM02_HRS_MS4_1B_20170614T083045_20170614T083048_TOU_1234_58ee.json  DM02_HRS_MS4_1B_20200625T074519_20200625T074521_TOU_1234_dc58.json  DM02_HRS_MS4_1C_20170614T083045_20170614T083048_TOU_1234_58ee.json  DM02_HRS_MS4_1C_20170614T083045_20170614T083048_TOU_1234_58ee_COG.json  DM02_HRS_MS4_1C_20200625T074519_20200625T074521_TOU_1234_dc58.json  DM02_HRS_MS4_1C_20200625T074519_20200625T074521_TOU_1234_dc58_COG.json  DM02_HRS_PM4_1B_20150517T113848_20150517T113851_DMI_004922_B536.json  DM02_HRS_PM4_1C_20150517T113848_20150517T113851_DMI_004922_435F.json  EW02_WV1_MS4_OR_20200403T095141_20200403T095152_TOU_1234_59f5.json  EW02_WV1_MS4_OR_20200403T095141_20200403T095152_TOU_1234_59f5_COG.json  EW02_WV1_MS4_SO_20200403T095141_20200403T095152_TOU_1234_59f5.json  EW02_WV1_PM4_OR_20140507T101616_20140507T101618_GAF_24015_0974.json  EW02_WV1_PM4_SO_20140507T101616_20140507T101618_GAF_24015_987C.json  EW02_WV1_PM8_SO_20110204T100243_20110204T100254_DGI_6946_EE22.0000.json  EW03_WV3_MS4_OR_20200405T095747_20200405T095754_TOU_1234_b3ab.json  EW03_WV3_MS4_OR_20200405T095747_20200405T095754_TOU_1234_b3ab_COG.json  EW03_WV3_MS4_SO_20200405T095747_20200405T095754_TOU_1234_b3ab.json  EW03_WV3_PM4_OR_20140902T104338_20140902T104341_GAF_293_8E7D.json  EW03_WV3_PM4_SO_20140902T104338_20140902T104341_GAF_293_8678.json  FO02_RSI_FUS_20060621T08432143_20060621T08432143_CDS_0000_EEEE.json  GY01_GIS_MS4_OR_20200228T144643_20200228T144648_TOU_1234_d2f5.json  (+105 more)
eometadatatool/stac/framework/: stac_asset.py  stac_bands.py  stac_extension.py  stac_item.py  stac_link.py  utils.py
eometadatatool/stac/utils/: compare_odata.py  find_unused_mappings.py  regenerate_examples.py
tests/: conftest.py  test_checksum.py  test_clas_utils.py  test_collection.py  test_dict_to_tree.py  test_dlc.py  test_function_namespace.py  test_item_examples.py  test_item_template.py
tests/data/s5p/: mappings.csv
tests/references/extract/: S3B_OL_1_EFR____20230311T214926_20230311T214926_20230312T085631_0000_077_100_4320_PS2_O_NT_003.SEN3.json  S5P.TROPOMI.O3.PGL.json  S5P_OFFL_L2__CH4____20200303T013547_20200303T031717_12367_01_010302_20200306T053811.json  S5P_OFFL_L2__O3_____20200303T013547_20200303T031717_12367_01_010107_20200306T053811.json
utils/: get_test_items_list.py  update_ref_data.py
(+399 files in other folders)
